* Dialer: set CALLERID(num) in OriginateResponse handler in order to ensure the
  CDR has a meaningful source field value. Fixes Elastix bug #1411.
* Trunks Used per Hour: core query method rewritten to use SQL parameters. SQL
  was reimplemented to use more efficient grouping. HTML formatting moved to 
  index.php. Trunk filter now allows report on calls from all trunks.
* Agents Connection Time: removed. This report is now essentially identical to
  Login Logout.
* Login Logout: complete rewrite. This rewrite takes advantage of the updated
  Elastix API for paloSantoGrid available since elastix-framework 2.2-18. The 
  custom code for calendars was replaced with standard date controls. Most 
  importantly, the SQL query was considerably simplified for readability, and in
  the process, fixes the calculation of total session time. Finally, the 
  filtering by incoming queue from Agents Connection Time was added to this 
  module. Part of fix for Elastix bug #1409.
* Campaign Out: reactivate a finished campaign if calls are added to it
* Campaign Out: Cleanup of outgoing campaign library:
  Replace all uses of ereg with preg_match
  Removed some dead code
  Replace uses of DBCAMPO with proper SQL parameters
  Refactor check of queue by incoming campaigns
  Remove code that reveals SQL query in several error paths
  Rewrite loading of phone numbers in order to greatly reduce memory usage
* Campaign Out: Campaign modification now allows upload of call file, which will
  be appended to the call list already present.
* Campaign In,Campaign Out: lift restriction on removing campaigns with 
  connected calls. Users really do need to remove campaigns even after calls 
  have been made.
* Agent Console: fix scenario in which an agent that opens several instances of
  the agent console under the same session will find that the pause duration
  increases by the pause multiplied by the number of consoles. 